// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArrowNavMenu behaviour does nothing if extra keys are pressed 1`] = `
<ul
  aria-activedescendant="aNM-0-One"
  class="ArrowNavMenu"
  role="menu"
>
  
  <li
    id="aNM-0-One"
    role="menuitem"
  >
    <button
      class="ArrowNavMenu__item ArrowNavMenu__item--selected"
      id="aNM-btn-0"
    >
      One
    </button>
  </li>
  <li
    id="aNM-1-Two"
    role="menuitem"
  >
    <button
      class="ArrowNavMenu__item"
      id="aNM-btn-1"
    >
      Two
    </button>
  </li>
  
</ul>
`;

exports[`ArrowNavMenu behaviour does nothing if invalid event 1`] = `
<ul
  aria-activedescendant="aNM-0-One"
  class="ArrowNavMenu"
  role="menu"
>
  
  <li
    id="aNM-0-One"
    role="menuitem"
  >
    <button
      class="ArrowNavMenu__item ArrowNavMenu__item--selected"
      id="aNM-btn-0"
    >
      One
    </button>
  </li>
  <li
    id="aNM-1-Two"
    role="menuitem"
  >
    <button
      class="ArrowNavMenu__item"
      id="aNM-btn-1"
    >
      Two
    </button>
  </li>
  
</ul>
`;

exports[`ArrowNavMenu behaviour selects first item in items with home 1`] = `
<ul
  aria-activedescendant="aNM-1-Two"
  class="ArrowNavMenu"
  role="menu"
>
  
  <li
    id="aNM-0-One"
    role="menuitem"
  >
    <button
      class="ArrowNavMenu__item"
      id="aNM-btn-0"
    >
      One
    </button>
  </li>
  <li
    id="aNM-1-Two"
    role="menuitem"
  >
    <button
      class="ArrowNavMenu__item ArrowNavMenu__item--selected"
      id="aNM-btn-1"
    >
      Two
    </button>
  </li>
  
</ul>
`;

exports[`ArrowNavMenu behaviour selects item with letter starting with key pressed 1`] = `
<ul
  aria-activedescendant="aNM-0-this"
  class="ArrowNavMenu"
  role="menu"
>
  
  <li
    id="aNM-0-this"
    role="menuitem"
  >
    <button
      class="ArrowNavMenu__item ArrowNavMenu__item--selected"
      id="aNM-btn-0"
    >
      this
    </button>
  </li>
  <li
    id="aNM-1-That"
    role="menuitem"
  >
    <button
      class="ArrowNavMenu__item"
      id="aNM-btn-1"
    >
      That
    </button>
  </li>
  <li
    id="aNM-2-There"
    role="menuitem"
  >
    <button
      class="ArrowNavMenu__item"
      id="aNM-btn-2"
    >
      There
    </button>
  </li>
  
</ul>
`;

exports[`ArrowNavMenu behaviour selects last item in items with end 1`] = `
<ul
  aria-activedescendant="aNM-0-One"
  class="ArrowNavMenu"
  role="menu"
>
  
  <li
    id="aNM-0-One"
    role="menuitem"
  >
    <button
      class="ArrowNavMenu__item ArrowNavMenu__item--selected"
      id="aNM-btn-0"
    >
      One
    </button>
  </li>
  <li
    id="aNM-1-Two"
    role="menuitem"
  >
    <button
      class="ArrowNavMenu__item"
      id="aNM-btn-1"
    >
      Two
    </button>
  </li>
  
</ul>
`;

exports[`ArrowNavMenu behaviour selects next item with arrow down 1`] = `
<ul
  aria-activedescendant="aNM-0-One"
  class="ArrowNavMenu"
  role="menu"
>
  
  <li
    id="aNM-0-One"
    role="menuitem"
  >
    <button
      class="ArrowNavMenu__item ArrowNavMenu__item--selected"
      id="aNM-btn-0"
    >
      One
    </button>
  </li>
  <li
    id="aNM-1-Two"
    role="menuitem"
  >
    <button
      class="ArrowNavMenu__item"
      id="aNM-btn-1"
    >
      Two
    </button>
  </li>
  
</ul>
`;

exports[`ArrowNavMenu behaviour selects next item with arrow down or arrow right 1`] = `
<ul
  aria-activedescendant="aNM-0-One"
  class="ArrowNavMenu"
  role="menu"
>
  
  <li
    id="aNM-0-One"
    role="menuitem"
  >
    <button
      class="ArrowNavMenu__item ArrowNavMenu__item--selected"
      id="aNM-btn-0"
    >
      One
    </button>
  </li>
  <li
    id="aNM-1-Two"
    role="menuitem"
  >
    <button
      class="ArrowNavMenu__item"
      id="aNM-btn-1"
    >
      Two
    </button>
  </li>
  
</ul>
`;

exports[`ArrowNavMenu behaviour selects next item with arrow right 1`] = `
<ul
  aria-activedescendant="aNM-1-Two"
  class="ArrowNavMenu"
  role="menu"
>
  
  <li
    id="aNM-0-One"
    role="menuitem"
  >
    <button
      class="ArrowNavMenu__item"
      id="aNM-btn-0"
    >
      One
    </button>
  </li>
  <li
    id="aNM-1-Two"
    role="menuitem"
  >
    <button
      class="ArrowNavMenu__item ArrowNavMenu__item--selected"
      id="aNM-btn-1"
    >
      Two
    </button>
  </li>
  
</ul>
`;

exports[`ArrowNavMenu behaviour selects next item with letter starting with key pressed 1`] = `
<ul
  aria-activedescendant="aNM-0-this"
  class="ArrowNavMenu"
  role="menu"
>
  
  <li
    id="aNM-0-this"
    role="menuitem"
  >
    <button
      class="ArrowNavMenu__item ArrowNavMenu__item--selected"
      id="aNM-btn-0"
    >
      this
    </button>
  </li>
  <li
    id="aNM-1-That"
    role="menuitem"
  >
    <button
      class="ArrowNavMenu__item"
      id="aNM-btn-1"
    >
      That
    </button>
  </li>
  <li
    id="aNM-2-There"
    role="menuitem"
  >
    <button
      class="ArrowNavMenu__item"
      id="aNM-btn-2"
    >
      There
    </button>
  </li>
  
</ul>
`;

exports[`ArrowNavMenu behaviour selects next item with letter starting with key pressed circular 1`] = `
<ul
  aria-activedescendant="aNM-2-There"
  class="ArrowNavMenu"
  role="menu"
>
  
  <li
    id="aNM-0-this"
    role="menuitem"
  >
    <button
      class="ArrowNavMenu__item"
      id="aNM-btn-0"
    >
      this
    </button>
  </li>
  <li
    id="aNM-1-That"
    role="menuitem"
  >
    <button
      class="ArrowNavMenu__item"
      id="aNM-btn-1"
    >
      That
    </button>
  </li>
  <li
    id="aNM-2-There"
    role="menuitem"
  >
    <button
      class="ArrowNavMenu__item ArrowNavMenu__item--selected"
      id="aNM-btn-2"
    >
      There
    </button>
  </li>
  
</ul>
`;

exports[`ArrowNavMenu behaviour selects previous item with arrow left 1`] = `
<ul
  aria-activedescendant="aNM-0-One"
  class="ArrowNavMenu"
  role="menu"
>
  
  <li
    id="aNM-0-One"
    role="menuitem"
  >
    <button
      class="ArrowNavMenu__item ArrowNavMenu__item--selected"
      id="aNM-btn-0"
    >
      One
    </button>
  </li>
  <li
    id="aNM-1-Two"
    role="menuitem"
  >
    <button
      class="ArrowNavMenu__item"
      id="aNM-btn-1"
    >
      Two
    </button>
  </li>
  
</ul>
`;

exports[`ArrowNavMenu behaviour selects previous item with arrow up 1`] = `
<ul
  aria-activedescendant="aNM-1-Two"
  class="ArrowNavMenu"
  role="menu"
>
  
  <li
    id="aNM-0-One"
    role="menuitem"
  >
    <button
      class="ArrowNavMenu__item"
      id="aNM-btn-0"
    >
      One
    </button>
  </li>
  <li
    id="aNM-1-Two"
    role="menuitem"
  >
    <button
      class="ArrowNavMenu__item ArrowNavMenu__item--selected"
      id="aNM-btn-1"
    >
      Two
    </button>
  </li>
  
</ul>
`;

exports[`ArrowNavMenu behaviour selects previous item with arrow up or arrow left 1`] = `
<ul
  aria-activedescendant="aNM-1-Two"
  class="ArrowNavMenu"
  role="menu"
>
  
  <li
    id="aNM-0-One"
    role="menuitem"
  >
    <button
      class="ArrowNavMenu__item"
      id="aNM-btn-0"
    >
      One
    </button>
  </li>
  <li
    id="aNM-1-Two"
    role="menuitem"
  >
    <button
      class="ArrowNavMenu__item ArrowNavMenu__item--selected"
      id="aNM-btn-1"
    >
      Two
    </button>
  </li>
  
</ul>
`;

exports[`ArrowNavMenu behaviour sets selected on click 1`] = `
<ul
  aria-activedescendant="aNM-1-Two"
  class="ArrowNavMenu"
  role="menu"
>
  
  <li
    id="aNM-0-One"
    role="menuitem"
  >
    <button
      class="ArrowNavMenu__item"
      id="aNM-btn-0"
    >
      One
    </button>
  </li>
  <li
    id="aNM-1-Two"
    role="menuitem"
  >
    <button
      class="ArrowNavMenu__item ArrowNavMenu__item--selected"
      id="aNM-btn-1"
    >
      Two
    </button>
  </li>
  
</ul>
`;

exports[`ArrowNavMenu rendering renders ArrowNavMenu 1`] = `
<ul
  aria-activedescendant="aNM-0-One"
  class="ArrowNavMenu"
  role="menu"
>
  
  <li
    id="aNM-0-One"
    role="menuitem"
  >
    <button
      class="ArrowNavMenu__item ArrowNavMenu__item--selected"
      id="aNM-btn-0"
    >
      One
    </button>
  </li>
  <li
    id="aNM-1-Two"
    role="menuitem"
  >
    <button
      class="ArrowNavMenu__item"
      id="aNM-btn-1"
    >
      Two
    </button>
  </li>
  
</ul>
`;

exports[`ArrowNavMenu rendering renders ArrowNavMenu with non default active 1`] = `
<ul
  aria-activedescendant="aNM-1-Two"
  class="ArrowNavMenu"
  role="menu"
>
  
  <li
    id="aNM-0-One"
    role="menuitem"
  >
    <button
      class="ArrowNavMenu__item"
      id="aNM-btn-0"
    >
      One
    </button>
  </li>
  <li
    id="aNM-1-Two"
    role="menuitem"
  >
    <button
      class="ArrowNavMenu__item ArrowNavMenu__item--selected"
      id="aNM-btn-1"
    >
      Two
    </button>
  </li>
  
</ul>
`;
